Update branch names

--- a/.github/workflows/test_production_build.yml
+++ b/.github/workflows/test_production_build.yml
@@ -5,7 +5,7 @@ on:
     branches-ignore:
       - master
       - main
-      - development
+      - develop
 
 env:
   DOCKER_REGISTRY_HOST: ${{ secrets.DOCKER_REGISTRY_HOST }}
