--- a/.github/workflows/deploy_heroku.yml
+++ b/.github/workflows/deploy_heroku.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
       - main
-      - development
+      - develop
     types:
       - completed
   workflow_dispatch:
